--- a/sass/actors/_npc.scss
+++ b/sass/actors/_npc.scss
@@ -10,7 +10,7 @@
 .essence20 .npc-defenses {
   list-style: none;
   margin-right: 3px;
-  padding: 8px;
+  padding: v.$padding;
   overflow-y: auto;
   color: v.$textcolor1;
   display: flex;
